# candidate-ai-agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  auth.py  build_project_kb.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  secrets.toml.example  settings.py  setup.sh
.github/workflows/: ci.yml
agent/: agent.py  llm.py  tools.py
evaluation/: harness.py  pipeline.py  regenerate_report.py  report.py  run_eval.py
evaluation/data/: cand_1.py  cand_2.py  cand_3.py  cand_4.py  cand_5.py  cand_6.py  candidate_seed.json  generate_all.py  golden_dataset.json  synthetic_resume.md
evaluation/data/candidate_1/: candidate_seed.json  golden_dataset.json
evaluation/data/candidate_2/: candidate_seed.json  cv_yoni_abergel.docx  golden_dataset.json  readme_yoni_abergel.docx  recommendation_yoni_abergel.docx
evaluation/data/candidate_3/: candidate_seed.json  cv_maya_chen.txt  golden_dataset.json  readme_maya_chen.txt  recommendation_maya_chen.txt
evaluation/evaluators/: deepeval_evaluator.py  ingestion_evaluator.py  ragas_evaluator.py  refusal_evaluator.py  retrieval_gate_evaluator.py  router_evaluator.py  tool_evaluator.py
evaluation/reports/: eval_report_20260629_210221.html  eval_report_20260701_210848.html  geval_scores.csv  hallucination_scores.csv  ingestion_report.json  pipeline_results.json  ragas_scores.csv  refusal_scores.csv  retrieval_gate_scores.csv  router_scores.csv  tool_selection_scores.csv
pages/: recruiter.py  setup.py
rag/: embedder.py  ingest.py  reranker.py  retriever.py
skill_proficiency_estimator/: eda.ipynb  run_generation.py
skill_proficiency_estimator/data/: archetypes.json  documents_db.json  evidence_profiles.json  name_pool.json  personas.json  retrieval_meta.jsonl  skills_taxonomy.json  structure_seeds.json
skill_proficiency_estimator/generate/: __init__.py  assembler.py  documents.py  hyperparams.py  personas.py  phrase_tracker.py  planner.py  prompts.py  sanitizer.py  seed_generator.py
skill_proficiency_estimator/scoring_model/: __init__.py  build_dataset.py  config.py  dataset.py  evaluate.py  heads.py  metrics.py  model.py  predict.py  report.py  run_all.py  train.py
skill_proficiency_estimator/validate/: __init__.py  cross_validate.py  shortcut_check.py  stats.py
store/: skill_proficiency.py  structured.py
tests/: e2e_smoke_test.py  inspect_chunks.py  test_ingest.py  test_retriever.py
(+28 files in other folders)
